--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 </head>
 <body>
     <h1>O futebol é arte</h1>  
-<p>O futebol é muito mais do que um esporte; é uma paixão que une pessoas de todas as idades, raças e origens ao redor do mundo.
+</p>O futebol é muito mais do que um esporte; é uma paixão que une pessoas de todas as idades, raças e origens ao redor do mundo.
     Desde os primeiros chutes em um campo improvisado até as partidas épicas nos maiores estádios, o futebol tem o poder de criar laços e celebrar a diversidade.
-   É um jogo que transcende fronteiras e línguas, conectando corações e mentes em um hino global de competitividade, habilidade e espírito esportivo.
+   É um jogo que transcende fronteiras e línguas, conectando corações e mentes em um hino global de competitividade, habilidade e espírito esportivo.,</p>
    
-<p> A magia do futebol está em sua capacidade de transformar um simples momento em uma memória inesquecível. 
+</p> A magia do futebol está em sua capacidade de transformar um simples momento em uma memória inesquecível. 
     Seja você um jogador, um torcedor fervoroso ou alguém que apenas aprecia a beleza do esporte, o futebol é uma celebração da vida, da amizade e da superação.
     Nos gramados, as histórias de heróis são escritas, as rivalidades são intensificadas e o amor pelo jogo perdura. 
-    junte-se a nós nesta jornada emocionante através do mundo do futebol, onde cada partida é uma oportunidade de criar histórias extraordinárias e compartilhar uma paixão que transcende fronteiras.
+    junte-se a nós nesta jornada emocionante através do mundo do futebol, onde cada partida é uma oportunidade de criar histórias extraordinárias e compartilhar uma paixão que transcende fronteiras.</p>
 
 </body>
-/html><img src= repositório.jpeg">
-
-
+<img scr="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.esbrasil.com.br%2Fwp-content%2Fuploads%2F2023%2F01%2Fneymar_brasil_ES-Brasil.jpg&tbnid=uAi40HyhDTNwSM&vet=12ahUKEwj1_9jW17mCAxX3uZUCHVBbAawQMygMegQIARB-..i&imgrefurl=https%3A%2F%2Fesbrasil.com.br%2Fcabecadas-no-futebol-riscos-traumas-e-duvidas-sobre-o-futuro%2F&docid=XSrCmrOl0WX8cM&w=1068&h=668&q=futebol&ved=2ahUKEwj1_9jW17mCAxX3uZUCHVBbAawQMygMegQIARB-" >
