--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
     junte-se a nós nesta jornada emocionante através do mundo do futebol, onde cada partida é uma oportunidade de criar histórias extraordinárias e compartilhar uma paixão que transcende fronteiras.</p>
 
 </body>
-<img scr="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.esbrasil.com.br%2Fwp-content%2Fuploads%2F2023%2F01%2Fneymar_brasil_ES-Brasil.jpg&tbnid=uAi40HyhDTNwSM&vet=12ahUKEwj1_9jW17mCAxX3uZUCHVBbAawQMygMegQIARB-..i&imgrefurl=https%3A%2F%2Fesbrasil.com.br%2Fcabecadas-no-futebol-riscos-traumas-e-duvidas-sobre-o-futuro%2F&docid=XSrCmrOl0WX8cM&w=1068&h=668&q=futebol&ved=2ahUKEwj1_9jW17mCAxX3uZUCHVBbAawQMygMegQIARB-" >
+<img scr="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nacaradogol.jor.br%2Faguska-mnich&psig=AOvVaw0g3Xm2fdDtgmDEI_uPm6Si&ust=1699714616182000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNi_x8TYuYIDFQAAAAAdAAAAABAH">
